# eduhost

./: .dev.env  .dev.key  .gitignore  AGENTS.md  Cargo.toml  compose.dev.yml  startup.dev.sh
backend/: Cargo.toml
backend/src/: app.rs  auth.rs  crypto.rs  database.rs  databases.rs  error.rs  group_id.rs  groups.rs  lib.rs  main.rs  normalize.rs  profile.rs  projects.rs  service.rs  session.rs  subjects.rs
backend/src/auth/: commands.rs  dtos.rs  queries.rs  service.rs
backend/src/databases/: dtos.rs  queries.rs  service.rs
backend/src/groups/: dtos.rs  queries.rs  service.rs
backend/src/profile/: dtos.rs  queries.rs  service.rs
backend/src/projects/: commands.rs  dtos.rs  queries.rs  service.rs
backend/src/subjects/: dtos.rs  queries.rs  service.rs
backend/tests/: auth_flow.rs  auth_signin.rs  auth_signup.rs
backend/tests/support/: mod.rs
bruno/eduhost/: bruno.json  collection.bru  get current session.bru  refresh.bru  signin.bru  signup.bru
bruno/eduhost/auth/: refresh.bru  signin.bru  signup.bru
bruno/eduhost/databases/: folder.bru  get databases.bru
bruno/eduhost/groups/: folder.bru  get groups.bru
bruno/eduhost/profile/: folder.bru  get metrics.bru  get profile.bru
bruno/eduhost/projects/: create project.bru  folder.bru  get project.bru  get projects.bru  is project alias available.bru  set project source.bru
bruno/eduhost/subjects/: folder.bru  get subjects.bru
docker/: Caddyfile.dev  Dockerfile.dev.backend  Dockerfile.dev.database  Dockerfile.dev.frontend  database-entrypoint.sh  frontend-entrypoint.sh
docker/loki/: local-config.yml
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.tsx  index.tsx  tailwind.css
frontend/src/components/: AccountCountCard.tsx  AccountUsageCard.tsx  Footer.tsx  Header.tsx  Hide.tsx  NavigationCard.tsx  Notification.tsx  ReadonlyField.tsx  SubjectCard.tsx  VolumeCategoryCard.tsx
frontend/src/entities/: auth.ts  groups.ts  profile.ts  projects.ts  session.ts  subjects.ts
migrations/: 001_users_initial.sql  002_groups_initial.sql  003_teachers_initial.sql  004_sessions_initial.sql  005_subjects_initial.sql  006_databases_initial.sql  007_projects_initial.sql  008_databases_project_id.sql  008_projects_source_field.sql  009_project_sources_git_branches.sql  010_project_sources_repository_url.sql  011_project_sources_root_dir_required.sql  012_databases_project_id.sql
(+46 files in other folders)
