[workspace]
resolver = "2"
members = ["backend"]

[workspace.dependencies]
tracing-loki = { version = "0.2.6", default-features = false, features = ["compat-0-2-1", "rustls"] }
sqlx = { version = "0.8.6", features = ["postgres", "mysql", "runtime-tokio", "time", "uuid"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1.12.0", features = ["rng", "serde", "v7"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", features = ["serde"] }
axum = { version = "0.8.8", features = ["http2"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum-prometheus = "0.10.0"
serde_json = "1.0.149"
sealed-env = "0.1.0"
tracing = "0.1.44"
rand = "0.10.0"
base64 = "0.22.1"
axum-cookie = "0.2.4"
anyhow = "1.0.101"
argon2 = "0.5.3"

