[package]
name = "eduhost"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
axum.workspace = true
axum-cookie.workspace = true
argon2.workspace = true
serde.workspace = true
rand.workspace = true
base64.workspace = true
serde_json.workspace = true
sealed-env.workspace = true
anyhow.workspace = true
time.workspace = true

